<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"  >
     <Preference
          android:title="@string/app_name"
        android:widgetLayout="@layout/ic_custom"
        />
    <CheckBoxPreference 
        android:key="enabled" 
        android:title="@string/enabled"
        />
	<ListPreference 
	    android:key="which_contacts" 
	    android:title="@string/which_contacts"
		android:entries="@array/which_contacts"	
		android:entryValues="@array/which_contacts_values"
		android:defaultValue="all"
		/>
	<ListPreference 
	    android:key="delay" 
	    android:title="@string/delay"
		android:entries="@array/delay"	
		android:entryValues="@array/delay_values"
		android:defaultValue="2"
		/>
	<CheckBoxPreference
	    android:key="headset_only" 
	    android:title="@string/headset_only"
	    />
	<CheckBoxPreference 
	    android:key="use_speakerphone" 
	    android:title="@string/use_speakerphone"
	    />
	<CheckBoxPreference 
	    android:key="no_second_call" 
	    android:title="@string/no_second_call"
	    />
	<com.example.smartcallmanager.Preference.CCHDialogPreference
		android:title="@string/usermanual"
		android:src="@drawable/ic_launcher"
		android:dialogTitle="@string/usermanual"
		android:dialogMessage="@string/manual"
		android:dialogIcon="@drawable/ic_launcher"
		android:negativeButtonText="@null" />
	<com.example.smartcallmanager.Preference.CCHDialogPreference
		android:title="@string/app"
		android:src="@drawable/ic_launcher"
		android:dialogTitle="@string/app"
		android:dialogMessage="@string/fahad"
		android:dialogIcon="@drawable/ic_launcher"
		android:negativeButtonText="@null" />
</PreferenceScreen>
